--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="bands" ></div>
     <script> console.log('test')</script>
     <!--Import JavaScript-->
      <script src="main.js"></script>
